# epoch_toolkit

./: .gitignore  LICENSE  README.md  build.py  post_install.py  pyproject.toml  ruff.toml  setup.py
epoch_toolkit/: __init__.py  __version__.py
epoch_toolkit/core/: __init__.py  const.py  grid.py  handler.py
epoch_toolkit/core/transform/: __init__.py  crop.py  math.py  projection.py
epoch_toolkit/generator/: block.py  blocks.py  experiment.py  slurm.py
epoch_toolkit/grid/: __init__.py  base.py  projection.py
epoch_toolkit/handler/: __init__.py  file.py  folder.py
epoch_toolkit/plot/: config.py
epoch_toolkit/utils/: __init__.py  logging.py
test/: check.ipynb
utils/: fixed_sdf_build
