[tool.poetry]
name = "epoch-toolkit"
version = "0.0.0"
description = "Toolkit for EPOCH PIC Code"
authors = ["Lev Litvinov <misery7100@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
seaborn = "^0.13.2"
matplotlib = "^3.1.1"
pydantic = "^2.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
post-install = "post_install:post_install"

