[tool.poetry]
name = "epoch-toolkit"
version = "0.0.0"
description = "Toolkit for EPOCH PIC Code"
authors = ["Lev Litvinov <misery7100@gmail.com>"]
license = "LICENSE"
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23"
seaborn = "^0.13.2"
matplotlib = "^3.1.1"
pydantic = "^2.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.files."epoch_toolkit/__version__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "numpy>=1.23", "setuptools", "wheel", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

